refactor: add fluid-value to properties

--- a/src/scss/blocks/_camps-swiper.scss
+++ b/src/scss/blocks/_camps-swiper.scss
@@ -1,13 +1,4 @@
 .camps-swiper {
-  &__swiper {
-  }
-
-  &__wrapper {
-  }
-
-  &__slide {
-  }
-
   &__image-wrapper {
     position: relative;
     width: 100%;
@@ -24,16 +15,16 @@
   }
 
   &__pagination {
-    top: -20px;
+    top: to.rem(-20px);
     left: 0;
     &-wrapper {
       position: relative;
       width: 100%;
-      height: 10px;
+      height: to.rem(10px);
     }
     &-bullet.swiper-pagination-bullet {
-      width: 12px;
-      height: 12px;
+      width: to.rem(12px);
+      height: to.rem(12px);
       background-color: rgba(255, 255, 255, 0.3);
       margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 7px) !important;
     }
@@ -44,17 +35,13 @@
 
   &__button {
     padding: to.rem(3px);
-    width: to.rem(100px);
-    height: to.rem(100px);
+    width: fluid-value(50px, 100px);
+    height: fluid-value(50px, 100px);
     background-color: $yellow;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: to.rem(50px);
-    @include media-custom(1320) {
-      width: min(to.rem(100px), to.rem(calc(100 * (100vw / 1320) * 0.9)));
-      height: min(to.rem(100px), to.rem(calc(100 * (100vw / 1320) * 0.9)));
-    }
+    border-radius: fluid-value(40px, 50px);
 
     &::after,
     &::before {
