--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "mixins/mixins";
 @import "base/common";
 @import "blocks/header";
+@import "blocks/toggle-menu";
 @import "blocks/hero";
 @import "blocks/runline";
 @import "blocks/train";
