--- a/src/scss/blocks/_trainers.scss
+++ b/src/scss/blocks/_trainers.scss
@@ -1,6 +1,6 @@
 .trainers {
   overflow: hidden;
   &__title {
-    padding-bottom: to.rem(78px);
+    padding-bottom: fluid-value(40px, 75px);
   }
 }
