--- a/src/scss/mixins/_mixins.scss
+++ b/src/scss/mixins/_mixins.scss
@@ -1,8 +1,8 @@
 @mixin font-base($font-family, $font-size, $font-weight, $line-height) {
   font-family: $font-family;
-  font-size: to.rem(#{$font-size}px);
+  font-size: $font-size;
   font-weight: $font-weight;
-  line-height: to.rem(#{$line-height}px);
+  line-height: $line-height;
 }
 
 @mixin font-mixin($font-family, $font-weight, $font-color) {
