--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -12,7 +12,7 @@
   }
 
   &__container {
-    padding: to.rem(40px) to.rem(16px);
+    padding: to.rem(40px) to.rem(16px) 0;
     position: relative;
     display: grid;
     align-items: center;
