--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -4,14 +4,18 @@
   align-items: center;
   width: 100%;
   padding: to.rem(0 15px);
-}
 
-.hero {
   &__content {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    grid-auto-columns: minmax(0, 1fr);
+    // grid-auto-columns: minmax(0, 1fr);
     grid-template-columns: repeat(12, 1fr);
+
+    @media screen and (max-width: to.rem(760px)) {
+      grid-auto-rows: min-content;
+      grid-template-rows: auto;
+      grid-template-columns: 1fr;
+    }
   }
 
   &__description {
@@ -47,26 +51,43 @@
   }
 
   &__top {
-    grid-area: 1 / 1 / 2 / span 8;
+    grid-area: 1 / 1 / 2 / 6;
     position: relative;
-    z-index: 1000;
+    z-index: 10;
+
+    @media screen and (max-width: to.rem(760px)) {
+      grid-area: 1 / 1 / 2 / 2;
+    }
   }
 
   &__bottom {
-    grid-area: 2 / 10 / 3 / span 5;
+    grid-area: 2 / 8 / 3 / 13;
     padding-left: to.rem(14px);
+
+    @media screen and (max-width: to.rem(760px)) {
+      grid-area: 4 / 1 / 5 / 2;
+    }
   }
 
   &__picture {
     &-top {
-      grid-area: 1 / 9 / 2 / span 6;
+      grid-area: 1 / 7 / 2 / 13;
       display: flex;
       justify-content: flex-end;
     }
     &-bottom {
-      grid-area: 2 / 1 / 3 / span 9;
+      grid-area: 2 / 1 / 3 / 8;
       position: relative;
       z-index: -1;
+    }
+
+    @media screen and (max-width: to.rem(760px)) {
+      &-top {
+        grid-area: 2 / 1 / 3 / 2;
+      }
+      &-bottom {
+        grid-area: 3 / 1 / 4 / 2;
+      }
     }
 
     &-wrapper-top {
@@ -74,13 +95,22 @@
       width: 90%;
       padding-top: 122%;
       transform: rotate(5deg);
+
+      @media screen and (max-width: to.rem(760px)) {
+        width: 68%;
+        padding-top: 96.5%;
+      }
     }
 
     &-wrapper-bottom {
       position: relative;
       width: 100%;
-      height: 80%;
+      padding-top: 80%;
       transform: rotate(-5deg);
+      @media screen and (max-width: to.rem(760px)) {
+        width: 69.5%;
+        padding-top: 56.7%;
+      }
     }
   }
 
@@ -97,6 +127,9 @@
 
       @media screen and (max-width: to.rem(860px)) {
         right: 0;
+      }
+      @media screen and (max-width: to.rem(760px)) {
+        right: fluid-value(10px, 27px, 320px, 760px);
       }
     }
 
@@ -116,11 +149,22 @@
   }
   &__text:not(:last-child) {
     padding: fluid-value(40px, 150px) 0 to.rem(24px);
+
+    @media screen and (max-width: to.rem(760px)) {
+      padding: to.rem(120px) 0 to.rem(22px);
+    }
   }
 
   &__btn {
     padding-left: fluid-value(58px, 74px);
     padding-right: fluid-value(58px, 74px);
     margin-top: fluid-value(32px, 60px);
+
+    @media screen and (max-width: to.rem(760px)) {
+      padding-left: 0;
+      padding-right: 0;
+      width: 100%;
+      max-width: to.rem(527px);
+    }
   }
 }
