add mobile styles

--- a/src/scss/blocks/_contacts.scss
+++ b/src/scss/blocks/_contacts.scss
@@ -1,43 +1,35 @@
 .contacts {
   overflow: auto;
   &__title {
-    padding-bottom: to.rem(75px);
-
-    @include media-custom(1320) {
-      padding-bottom: max(to.rem(40px), to.rem(calc(75 * (100vw / 1320))));
-    }
+    padding-bottom: fluid-value(40px, 75px);
   }
 
   &__body {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    column-gap: to.rem(40px);
+    gap: to.rem(40px);
   }
-
-  &__map {
-  }
-
   &__content {
+    display: flex;
+    flex-direction: column;
+    gap: fluid-value(20px, 25px);
+  }
+  &__content-link {
+    display: block;
   }
 
   &__footer {
-    padding-top: to.rem(150px);
-    @include media-custom(1320) {
-      padding-top: max(to.rem(60px), to.rem(calc(150 * (100vw / 1320))));
-    }
+    padding-top: fluid-value(60px, 150px);
   }
 
   &__footer-title {
-    padding-bottom: to.rem(75px);
-    @include media-custom(1320) {
-      padding-bottom: max(to.rem(40px), to.rem(calc(75 * (100vw / 1320))));
-    }
+    padding-bottom: fluid-value(40px, 75px);
   }
 
   &__list {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    column-gap: to.rem(40px);
+    gap: fluid-value(10px, 40px);
   }
 
   &__item {
@@ -47,13 +39,23 @@
   &__link {
     width: 100%;
     display: block;
-    border-radius: 35px;
-    border: 1px solid #323232;
+    border-radius: to.rem(35px);
+    border: to.rem(1px) solid #323232;
     text-align: center;
-    padding: to.rem(25px 0);
+    padding: to.rem(25px 0) fluid-value(18px, 25px);
+    @include font-base($font-onest, fluid-value(16px, 25px), 400, fluid-value(20.8px, 26px));
+  }
 
-    @include font-base($font-onest, 25, 400, 0);
-    @include responsive-font-size-line-height(16, 25, 0, 0, 1320);
-    @include responsive-paddings(18, 25, 18, 25, 0, 0, 0, 0, 1320);
+  @include media-custom(760) {
+    &__body {
+      display: flex;
+      flex-direction: column;
+      row-gap: to.rem(32px);
+    }
+
+    &__list {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 }
