--- a/src/scss/base/_colors.scss
+++ b/src/scss/base/_colors.scss
@@ -2,6 +2,9 @@ $white: #ffffff;
 $black: #323232;
 $yellow: #ffe600;
 $green: #859d6d;
-$blue: #20bffe;
+$light-blue: #20bffe;
+$blue: #29a0dc;
+$dark-blue: #1877f2;
 $grey: #c1c1c1;
 $light-grey: #fdfdfd;
+$insta-gradient: linear-gradient(93deg, #406ac9 0.51%, #a439ae 19.02%, #fe5440 55.36%, #ff9249 77.12%, #eb4a66 97.86%);
