add resize function

--- a/src/scss/blocks/_swiper-trainers.scss
+++ b/src/scss/blocks/_swiper-trainers.scss
@@ -66,4 +66,10 @@
     background-color: #d8d2c3;
     display: none;
   }
+
+  @media (max-width: to.rem(760px)) {
+    &__button {
+      display: none;
+    }
+  }
 }
