--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -44,3 +44,42 @@ a {
   padding: fluid-value(60px, 150px) to.rem(16px);
   overflow: hidden;
 }
+
+.btn {
+  @include font-mixin($font-onest, 400, $black);
+  font-size: fluid-value(16px, 25px);
+  padding: fluid-value(16px, 20px) 0 fluid-value(18px, 20px);
+  border-radius: fluid-value(25px, 35px);
+  text-align: center;
+  text-transform: uppercase;
+  background-color: $yellow;
+  cursor: pointer;
+  transition: 0.5s;
+
+  @media (min-width: to.rem(1024px)) {
+    // &__hero:focus,
+    &__main:hover {
+      color: $white;
+      box-shadow: inset 0 to.rem(-80px) 0 0 $black;
+    }
+    &__main:active {
+      background-color: $black;
+      color: $grey;
+    }
+    &__train:hover {
+      color: $black;
+      box-shadow: inset 0 to.rem(-80px) 0 0 $white;
+    }
+    &__train:active {
+      background-color: $white;
+      color: $dark-grey;
+    }
+    &__camps:hover {
+      box-shadow: inset 0 to.rem(-80px) 0 0 $yellow;
+    }
+    &__camps:active {
+      background-color: $dark-yellow;
+      border-width: 0px;
+    }
+  }
+}
