--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -90,12 +90,15 @@
     border: to.rem(1px) solid $yellow;
     color: $white;
   }
-  &__btn:hover {
-    color: $black;
-    box-shadow: inset 0 to.rem(-80px) 0 0 $white;
-  }
-  &__btn:active {
-    background-color: $white;
-    color: $dark-grey;
+
+  @media (min-width: to.rem(1024px)) {
+    &__btn:hover {
+      color: $black;
+      box-shadow: inset 0 to.rem(-80px) 0 0 $white;
+    }
+    &__btn:active {
+      background-color: $white;
+      color: $dark-grey;
+    }
   }
 }
