--- a/src/scss/blocks/_contacts.scss
+++ b/src/scss/blocks/_contacts.scss
@@ -40,7 +40,7 @@
     width: 100%;
     display: block;
     border-radius: to.rem(35px);
-    border: to.rem(1px) solid #323232;
+    border: to.rem(1px) solid $black;
     text-align: center;
     padding: to.rem(25px 0) fluid-value(18px, 25px);
     @include font-base($font-onest, fluid-value(16px, 25px), 400, fluid-value(20.8px, 26px));
@@ -90,6 +90,17 @@
     &--email:hover,
     &--email:focus {
       box-shadow: inset 0 to.rem(-80px) 0 0 $yellow;
+    }
+
+    @media (max-width: to.rem(1024px)) {
+      &:hover,
+      &:focus {
+        color: $black;
+        box-shadow: none;
+      }
+      &--instagram::after {
+        display: none;
+      }
     }
   }
 
