--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -35,7 +35,7 @@
       top: -40px;
       left: -16px;
       grid-column: 1/4;
-      height: 100vh;
+      min-height: 100vh;
       z-index: 88888;
       transform: translate(-1000px, 0px);
     }
