--- a/src/scss/blocks/_camps.scss
+++ b/src/scss/blocks/_camps.scss
@@ -53,6 +53,17 @@
     text-transform: uppercase;
     grid-row: 2 / 3;
     grid-column: 1 / 13;
+
+    &--stroke {
+      position: relative;
+    }
+  }
+
+  &__svg {
+    transform: scale(1.1);
+    position: absolute;
+    top: -8px;
+    left: 3px;
   }
   &__slider {
     grid-row: 3 / 4;
