--- a/src/scss/blocks/_camps.scss
+++ b/src/scss/blocks/_camps.scss
@@ -65,6 +65,10 @@
     top: -8px;
     left: 3px;
   }
+  &__path {
+    stroke-dasharray: 1270;
+    stroke-dashoffset: 0;
+  }
   &__slider {
     grid-row: 3 / 4;
     grid-column: 1 / 13;
