--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -5,13 +5,15 @@
   width: 100%;
   padding: to.rem(0 15px);
 
+  padding-bottom: to.rem(30px);
+
   &__content {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     // grid-auto-columns: minmax(0, 1fr);
     grid-template-columns: repeat(12, 1fr);
 
-    @media screen and (max-width: to.rem(760px)) {
+    @media (max-width: to.rem(760px)) {
       grid-auto-rows: min-content;
       grid-template-rows: auto;
       grid-template-columns: 1fr;
@@ -55,7 +57,7 @@
     position: relative;
     z-index: 10;
 
-    @media screen and (max-width: to.rem(760px)) {
+    @media (max-width: to.rem(760px)) {
       grid-area: 1 / 1 / 2 / 2;
     }
   }
@@ -64,8 +66,9 @@
     grid-area: 2 / 8 / 3 / 13;
     padding-left: to.rem(14px);
 
-    @media screen and (max-width: to.rem(760px)) {
+    @media (max-width: to.rem(760px)) {
       grid-area: 4 / 1 / 5 / 2;
+      padding-left: 0;
     }
   }
 
@@ -81,7 +84,7 @@
       z-index: -1;
     }
 
-    @media screen and (max-width: to.rem(760px)) {
+    @media (max-width: to.rem(760px)) {
       &-top {
         grid-area: 2 / 1 / 3 / 2;
       }
@@ -96,7 +99,7 @@
       padding-top: 122%;
       transform: rotate(5deg);
 
-      @media screen and (max-width: to.rem(760px)) {
+      @media (max-width: to.rem(760px)) {
         width: 68%;
         padding-top: 96.5%;
       }
@@ -107,7 +110,7 @@
       width: 100%;
       padding-top: 80%;
       transform: rotate(-5deg);
-      @media screen and (max-width: to.rem(760px)) {
+      @media (max-width: to.rem(760px)) {
         width: 69.5%;
         padding-top: 56.7%;
       }
@@ -125,10 +128,10 @@
       object-position: right bottom;
       border: fluid-value(12px, 16px) solid $yellow;
 
-      @media screen and (max-width: to.rem(860px)) {
+      @media (max-width: to.rem(860px)) {
         right: 0;
       }
-      @media screen and (max-width: to.rem(760px)) {
+      @media (max-width: to.rem(760px)) {
         right: fluid-value(10px, 27px, 320px, 760px);
       }
     }
@@ -150,25 +153,35 @@
     &--stroke {
       position: relative;
     }
+
+    @media (max-width: to.rem(760px)) {
+      max-width: 100%;
+    }
   }
 
   &__text:first-child {
     padding: fluid-value(40px, 150px) 0 to.rem(24px);
 
-    @media screen and (max-width: to.rem(760px)) {
+    @media (max-width: to.rem(760px)) {
       padding: to.rem(120px) 0 to.rem(22px);
     }
   }
 
   &__text:last-child {
-    max-width: to.rem(380px);
+    max-width: to.rem(379px);
   }
 
   &__svg {
     position: absolute;
     top: 5px;
-    width: 100%;
-    left: -21px;
+    right: 25px;
+
+    @media (max-width: to.rem(900px)) {
+      right: 0px;
+    }
+    @media (max-width: to.rem(760px)) {
+      left: -14px;
+    }
   }
 
   &__path {
@@ -181,7 +194,7 @@
     padding-right: fluid-value(58px, 74px);
     margin-top: fluid-value(32px, 60px);
 
-    @media screen and (max-width: to.rem(760px)) {
+    @media (max-width: to.rem(760px)) {
       padding-left: 0;
       padding-right: 0;
       width: 100%;
